fix(directory): repair the SIRENE repairer import
Two bugs left the import silently non-functional: List.of() rejects a
null department element (NPE) when no department filter is passed, and
the default NAF codes (95.29A/95.29B) don't exist in the real
nomenclature — the API rejected every call with 400. Fixed to
Collections.singletonList(null) and real codes (95.23Z/95.29Z).